# flashback

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: ImageProcessor.hpp  Screenshot.hpp  ScreenshotManager.hpp  Settings.hpp
src/: Screenshot.cpp  ScreenshotManager.cpp  flashback.cpp
test/: test_Screenshot.cpp
